# si4707-cpp

./: .gitignore  CMakeLists.txt  PLAN  PLAN.md  README.md  bus_scan.c  bus_scan.h  hardware.h  mqtt-publisher.c  mqtt-publisher.h  settings.h  si4707-cpp.c  si4707.c  si4707.h  si4707_const.h  util.h
.nova/Publishing/: Debugger Orange Pi Zero 2.json
.nova/Tasks/: Build.json  CMake.json  Flash.json
libraries/: CMakeLists.txt
src/hal/: si4707_hal.h  si4707_hal_rp2040.c  si4707_hal_rp2040.h  si4707_hal_rp2040_spi.c
src/main/: hardware.h  mqtt-publisher.h  settings.h  si4707-cpp.c  system_state.h
src/net/wiznet/: mqtt-publisher.c  mqtt-publisher.h
src/si4707/: si4707.c  si4707.h  si4707_const.h  si4707_structs.c  si4707_structs.h  util.c
src/test/: si4707_driver_test.c
